# Scanner-

./: .coverage  .gitignore  .pre-commit-config.yaml  =9.0.0  ARCHITECTURE_v8_CORRECTED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LOGIC_MAP.md  Makefile  README.md  SECURITY.md  __init__.py  cmdi.py  config.py  cors.py  crawler.py  docker-compose.yml  dumper.py  idor.py  jwt.py  lfi.py  main.py  manager.py  nosqli.py  pyproject.toml  reconnaissance.py  requirements.txt  scanner_rules.yaml  setup.sh  setup_termux.sh  sqli.py  ssrf.py  ssti.py  uploader.py  waf.py  xss.py  xxe.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github_wordlist_cache/: seclists_xss_5378b5d2061a0ef7.txt
core/: __init__.py  adaptive.py  agent_scanner.py  ai_engine.py  attack_map.py  attack_planner.py  attack_router.py  audit_logger.py  auth.py  banner.py  baseline.py  batch_scanner.py  browser_scanner.py  burp_exporter.py  ci_mode.py  compliance.py  config_loader.py  context.py  correlator.py  distributed.py  emit.py  engine.py  evasion.py  exploit_chain.py  exploit_searcher.py  goal_planner.py  intelligence_enricher.py  intruder.py  kill_chain.py  learning.py  local_llm.py  models.py  normalizer.py  notification.py  oob_callback.py  orchestrator.py  os_shell.py  output_phase.py  passive_recon.py  payload_generator.py  (+29 more)
modules/: __init__.py  api_versioning.py  base.py  brute_force.py  cloud_scanner.py  cmdi.py  cors.py  crlf.py  dep_confusion.py  deserialization.py  discovery.py  dumper.py  fuzzer.py  graphql.py  hpp.py  idor.py  jwt.py  lfi.py  mfa_bypass.py  network_exploits.py  nosqli.py  oauth.py  open_redirect.py  osint.py  port_scanner.py  proto_pollution.py  race_condition.py  reconnaissance.py  request_smuggling.py  scapy_crawler.py  sqli.py  ssrf.py  ssti.py  tech_exploits.py  uploader.py  vulnx.py  waf.py  websocket.py  xss.py  xxe.py
scanner/: __init__.py  vuln_scanner.py
schemas/: scanner_rules.schema.json
tests/: conftest.py  test_adaptive.py  test_agent_scanner.py  test_ai_engine.py  test_attack_map.py  test_attack_router.py  test_audit_logger.py  test_auth.py  test_banner.py  test_baseline.py  test_brute_force.py  test_cloud_scanner.py  test_cmdi_module.py  test_comparer.py  test_compliance.py  test_config.py  test_context.py  test_correlator_stability.py  test_cors_module.py  test_crawler.py  test_crlf_module.py  test_dashboard_discovery_nuclei.py  test_database.py  test_decoder.py  test_deserialization_module.py  test_discovery_and_nuclei.py  test_discovery_module.py  test_dumper_module.py  test_emit_contract.py  test_engine.py  test_engine_surface_integration.py  test_enhanced_discovery.py  test_evasion.py  test_exploit_chain.py  test_exploit_searcher.py  (+91 more)
(+52 files in other folders)
