[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-framework"
version = "8.0.0"
description = "ATOMIC Web Vulnerability Scanner"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "urllib3==2.6.3",
    "sqlalchemy==2.0.36",
    "fpdf2==2.8.3",
    "PyJWT==2.12.0",
    "pysocks==1.7.1",
    "flask==3.1.3",
    "flask-socketio==5.6.1",
    "flask-cors==6.0.2",
    "colorama==0.4.6",
    "tqdm==4.67.3",
    "dnspython==2.7.0",
]

[project.optional-dependencies]
full = [
    "lxml>=4.9.0",
    "cryptography>=38.0.0",
    "paramiko>=2.12.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["core*", "modules*", "utils*", "web*"]
