[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-framework"
version = "8.2.0"
description = "ATOMIC Web Vulnerability Scanner"
requires-python = ">=3.9"
dependencies = [
    "requests==2.33.1",
    "beautifulsoup4==4.14.3",
    "urllib3==2.6.3",
    "sqlalchemy==2.0.49",
    "fpdf2==2.8.7",
    "PyJWT==2.12.1",
    "pysocks==1.7.1",
    "flask==3.1.3",
    "flask-socketio==5.6.1",
    "flask-cors==6.0.2",
    "colorama==0.4.6",
    "tqdm==4.67.3",
    "dnspython==2.8.0",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
full = [
    "lxml>=5.0.0",
    "cryptography>=42.0.0",
    "paramiko>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "black>=25.0.0",
    "mypy>=1.10.0",
    "flake8>=7.1.0",
]

[tool.setuptools.packages.find]
include = ["core*", "modules*", "utils*", "web*"]
